Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63443

QWidgetAction creates empty dummy window on macOS 10.12.6

XMLWordPrintable

    • macOS
    • e02d758c9509de31aafc82d53296f1acdab55151 (qt/qtbase/5.12.0)

      I would like to use a custom widget in the context menu of a menu bar icon. If I add this custom widget (e.g. a simple QPushButton) to the context menu via QWidgetAction and open it, an empty dummy window appears (see the attached screenshot). If i close that window, the custom widget disappears from the context menu.

       

      Qt 5.7 and 5.8 seem to be unaffected.

      macOS 10.13 affected as well.

       

      Steps to reproduce on macOS 10.12.6:

      • Download and compile the attached test application
      • Run the application
      • Click on the small "Qt" logo on the menu bar
      • The context menu appears with a button in it

      Expected: no additional window is visible

      Actual: there is a small empty window in the center of the screen

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            tomikaa87qt Tamas Karpati
            Votes:
            2 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes